--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -7,21 +7,24 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 
+header {
+	align-items: center;
+	display: flex;
+	justify-content: center;
+}
+
 #icon {
 	position: absolute;
-	left: 50%;
-	top: 18%;
-	transform: translate(-50%,-50%);
+	display: block;
+	top: 15%;
 	height: 150px;
 	animation-delay: 0.2s;
 }
 
-.title {
+#title {
 	text-align: center;
 	position: absolute;
-	left: 50%;
-	top: 25%;
-	transform: translate(-50%, 0%);
+	top: 28%;
 	font-size: 60px;
 	letter-spacing: 6px;
 	color: #c8F8FF;
@@ -32,16 +35,14 @@ body {
 	font-family: 'Roboto Slab', sans-serif;
 	text-shadow: 1px 1px #ffaa1f;
 	z-index: 10;
-	animation-delay: 0.4s;
+	animation-delay: 0.6s;
 }
 
-.description {
+#description {
 	font-family: 'Noto Sans JP', sans-serif;
 	text-align: center;
 	position: absolute;
-	left: 50%;
-	top: 35%;
-	transform: translate(-50%, 0%);
+	top: 38%;
 	font-size: 20px;
 	letter-spacing: 1px;
 	color: #c8F8FF;
@@ -49,7 +50,7 @@ body {
 	letter-spacing: 2pt;
 	text-shadow: 1px 1px #ffaa1f;
 	z-index: 10;
-	animation-delay: 0.6s;
+	animation-delay: 1.2s;
 }
 
 #header {
@@ -511,12 +512,13 @@ body {
 #thankYouPage {
 	height: 100vh;
 	background-color: #c8f8ff;
+	display: flex;
+	align-content: center;
+	justify-content: center;
 }
 #icon2 {
 	position: absolute;
-	left: 50%;
-	top: 30%;
-	transform: translate(-50%,-50%);
+	top: 20%;
 	height: 150px;
 	animation-delay: 0.2s;
 }
@@ -524,9 +526,7 @@ body {
 	text-align: center;
 	position: absolute;
 	width: 100%;
-	left: 50%;
 	top: 45%;
-	transform: translate(-50%, 0%);
 	font-size: 30px;
 	letter-spacing: 6px;
 	color: #33383a;
@@ -537,15 +537,13 @@ body {
 	font-family: 'Roboto Slab', sans-serif;
 	text-shadow: 1px 1px #ffaa1f;
 	z-index: 10;
-	animation-delay: 0.4s;
+	animation-delay: 0.6s;
 }
 #thankYouTag {
 	font-family: 'Noto Sans JP', sans-serif;
 	text-align: center;
 	position: absolute;
-	left: 50%;
 	top: 55%;
-	transform: translate(-50%, 0%);
 	font-size: 20px;
 	letter-spacing: 1px;
 	color: #33383a;
@@ -553,5 +551,5 @@ body {
 	letter-spacing: 2pt;
 	text-shadow: 1px 1px #ffaa1f;
 	z-index: 10;
-	animation-delay: 0.6s;
+	animation-delay: 1.2s;
 }
